alignment fix 2

--- a/style.css
+++ b/style.css
@@ -7,17 +7,15 @@
 
 .slot{
     width: 32.2%;
-    height: 100px;
-    line-height: 100px;
+    height: 99px;
+    line-height: 99px;
     text-align: center;
     background-color: #3498DB;
-    display: block;
+    display: inline-block;
     margin: 0px;
     color: white;
     font-size: 1em;
     border-radius: 8px;
-    float: left;
-    vertical-align: middle;
 }
 
 .slot a{
@@ -29,7 +27,7 @@
 }
 
 .button {
-    background-color: #4CAF50; /* Green */
+    background-color: #4CAF50; 
     border: none;
     padding: 1px 28px;
     text-align: center;
